performance analysis, bag optimization, and number1d experiments